Making the Controller Pretty